# telegram-sender

./: .gitignore  README.md  samconfig.toml  template.yaml
events/: sqs.json
rust_app/: Cargo.toml
rust_app/src/: main.rs
src/: app.js  package-lock.json  package.json
