[package]
name = "telegram-sender"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.55.3"
aws-sdk-ssm = "0.28.0"
aws_lambda_events = { version = "0.10.0", default-features = false, features = ["sqs"] }

lambda_runtime = "0.8.1"
reqwest = { version = "0.11.18", features = ["json"]}
tokio = { version = "1", features = ["macros"] }
openssl = { version = "0.10.54", features = ["vendored"] }

